--- a/test.html
+++ b/test.html
@@ -7,13 +7,7 @@
 </head>
 <body>
     <div>
-        测试
-        new 222020年10月21日22:39:06
-
-        test 2021年05月27日19:39:38
-
-
-        2222
+        New test
     </div>
 </body>
 </html>
